<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/heading1Button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/heading_1"
        android:textColor="@color/text_primary" />

    <Button
        android:id="@+id/heading2Button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/heading_2"
        android:textColor="@color/text_primary" />

    <Button
        android:id="@+id/heading3Button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/heading_3"
        android:textColor="@color/text_primary" />

    <Button
        android:id="@+id/paragraphButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/paragraph"
        android:textColor="@color/text_primary" />

</LinearLayout>

