<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@color/white"
    android:fadeScrollbars="false"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="6dp"
    android:paddingEnd="16dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/toolbar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ImageButton
            android:id="@+id/undoButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/undo"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/redoButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/redo"
            android:src="@drawable/ic_redo" />

        <ImageButton
            android:id="@+id/formatButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/format"
            android:src="@drawable/ic_format_text" />

        <ImageButton
            android:id="@+id/dismissButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/dismiss_keyboard"
            android:src="@drawable/ic_keyboard_dismiss" />

    </LinearLayout>

</LinearLayout>

